# utilities

ALL_STL/: ALL_STL_COMPILED_UNIT.cpp  ALL_STL_INCLUDE.hpp  README.md
CMAKE_BOILERPLATE/: CMakeLists.txt  README.md
HTML5_BOILERPLATE/: README.md  index.html
city/cmake/: CMakeLists.txt
city/projects/depends/macro/: names.hpp
city/projects/entry/: main.cpp
console_starter/cmake/: CMakeLists.txt
console_starter/projects/depends/macro/: names.hpp
console_starter/projects/entry/: main.cpp
cxx_depends/: README.md
cxx_depends/dependencies/include/: include_dependencies.cpp  include_dependencies.hpp
cxx_depends/dependencies/macros/: names.hpp  types.hpp
cxx_depends/dependencies/pch/: pch.cpp  pch.hpp
cxx_depends/dependencies/stl/: stl_includes.cpp
cxx_depends/dependencies/win_api/: windows_includes.cpp
default_cpp_project_directory_setup/: README.md  directory_structure.ps1
dirt/: README.md
dirt/cmake/: CMakeLists.txt
dirt/docs/: example.txt  header.txt
dirt/projects/dirt.core/api/: dirt_api.cpp  dirt_api.hpp
dirt/projects/dirt.core/classes/: cmdline.cpp  cmdline.hpp  processor.cpp  processor.hpp
dirt/projects/dirt.core/codes/: args.hpp  codes.hpp
dirt/projects/dirt.core/depends/macro/: names.hpp
dirt/projects/dirt.core/depends/stl/: stl.hpp
dirt/projects/dirt.core/entry/: main.cpp
gfx_cpu/cmake/: CMakeLists.txt
gfx_cpu/project/api/: core_api.cpp  core_api.hpp
gfx_cpu/project/classes/window/: window_classes.cpp  window_classes.hpp
gfx_cpu/project/codes/: codes.hpp  desc.hpp  except_object.cpp  except_object.hpp
gfx_cpu/project/depends/include/: all_depends.cpp  all_depends.hpp
gfx_cpu/project/depends/macro/: names.hpp  types.hpp
gfx_cpu/project/depends/stl/: stl.hpp
gfx_cpu/project/depends/windows/: windows_api.cpp  windows_api.hpp
gfx_cpu/project/entry/: main.cpp
ignores/: .gitignore
lib_testing/cmake/: CMakeLists.txt
lib_testing/projects/core/api/: core_api.cpp  core_api.hpp
lib_testing/projects/core/classes/: data_structs.hpp
lib_testing/projects/core/depends/include/: all_depends.cpp  all_depends.hpp
lib_testing/projects/core/depends/libs/: all_assimp.cpp  all_assimp.hpp  all_glm.cpp  all_glm.hpp  all_imgui.hpp  all_sdl.cpp  all_sdl.hpp  all_spd.cpp  all_spd.hpp
lib_testing/projects/core/depends/macro/: names.hpp
lib_testing/projects/core/entry/: main.cpp
lib_testing/projects/core/error/: codes.hpp
libs_helpers/globjects/: install.txt
libs_helpers/globjects/header/: all_globjects.cpp  all_globjects.hpp
old-code/main_program_lol.blocks.exe/classes/utilities/: file_logger.cpp  file_logger.hpp  file_manager.cpp  file_manager.hpp  keyboard_sys.cpp  keyboard_sys.hpp  logging_sys.cpp  logging_sys.hpp  lol.api.cpp  lol.api.hpp  memory_sys.cpp  memory_sys.hpp  mouse_sys.cpp  mouse_sys.hpp  thread_manager.cpp  thread_manager.hpp  timer.cpp  timer.hpp
old-code/main_program_lol.blocks.exe/classes/window/logging/: log_window_class.cpp  log_window_class.hpp  system_log_window.cpp  system_log_window.hpp  window_class_log_window.cpp  window_class_log_window.hpp
old-code/main_program_lol.blocks.exe/dx/: dx_device_init.cpp  dx_device_init.hpp  loading.cpp  loading.hpp
old-code/main_program_lol.blocks.exe/entry/: main.cpp
old-code/main_program_lol.blocks.exe/entry/includes/: go.cpp  go.hpp
old-code/main_program_lol.blocks.exe/errors/: lol.codes.cpp  lol.codes.hpp
old-code/main_program_lol.blocks.exe/global/: globals.cpp  globals.hpp
old-code/main_program_lol.blocks.exe/macros/: debug_settings.hpp  test_settings.hpp  type_settings.hpp
old-code/main_program_lol.blocks.exe/macros/include/: lol.macros.include.hpp
old-code/main_program_lol.blocks.exe/pch/: pch.hpp
old-code/main_program_lol.blocks.exe/pch/dx_api/: directx_includes.cpp  directx_includes.hpp
old-code/main_program_lol.blocks.exe/pch/includes/: external.hpp  internal.hpp
old-code/main_program_lol.blocks.exe/pch/stl/: stl.cpp  stl_includes.hpp  stl_macro_definitions.hpp
old-code/main_program_lol.blocks.exe/pch/win32api/: windows_includes.cpp  windows_includes.hpp
old-code/main_program_lol.blocks.exe/shaders/: pixel_shader.hlsl  vertex_shader.hlsl
old-code/main_program_lol.blocks.exe/testing/api/: test.api.cpp  test.api.hpp
old-code/main_program_lol.blocks.exe/testing/dx11/: dx11_draw.cpp  dx11_draw.hpp
old-code/main_program_lol.blocks.exe/testing/dx12/: dx12_draw.cpp
old-code/main_program_lol.blocks.exe/testing/entry_go/: test.go.cpp  test.go.hpp
old-code/main_program_lol.blocks.exe/testing/open_gl/: ogl_draw.cpp
old-code/main_program_lol.blocks.exe/testing/test_files/: string2.txt
old-code/main_program_lol.blocks.exe/testing/vulkan/: vkn_draw.cpp
old-code/main_program_lol.blocks.exe/testing/window/: basic_window.cpp  basic_window.hpp  window_test.cpp  window_test.hpp
old-code/slowly/CMake/: CMakeLists.txt
old-code/slowly/docs/example_code/: slowly_code.sl
projects/csg/dependencies/include/: include_dependencies.hpp
projects/csg/dependencies/pch/: pch.hpp
projects/csg/dependencies/stl/: stl_includes.hpp
projects/csg/dependencies/win_api/: windows_includes.hpp
projects/csg/src/: main.cpp
projects/csg/test-files/: test.txt
ps_scripts/: cga.ps1  cha.ps1
raytracer_cpu/cmake/: CMakeLists.txt
raytracer_cpu/project/depends/macro/: names.hpp
raytracer_cpu/project/depends/stl/: stl.hpp  stl_includes.cpp  stl_includes.hpp
raytracer_cpu/project/entry/: main.cpp
sdl_starter/cmake/: CMakeLists.txt
sdl_starter/projects/depends/macro/: names.hpp
sdl_starter/projects/entry/: main.cpp
slowly/: README.md
slowly/docs/example_code/: slowly_code.sl
slowly/projects/slowly.core/api/: slowly_api.cpp  slowly_api.hpp
slowly/projects/slowly.core/codes/: codes.hpp
slowly/projects/slowly.core/entry/: main.cpp
slowly/projects/slowly.core/keywords/: keywords.hpp
write_out/box/: hr_description.hpp  hr_error.hpp  hr_to_enum.hpp
write_out/cmake/: CMakeLists.txt
write_out/projects/csg/src/: main.cpp
write_out/projects/csg/test-files/: output.txt  test.txt
(+17 files in other folders)
